--- a/计算机科学/Course And Book/杂项🥑🥑🥑🥑🥑.md
+++ b/计算机科学/Course And Book/杂项🥑🥑🥑🥑🥑.md
@@ -1,4 +1,21 @@
 
 
 - Hindley-Milner Type Checking [link](https://adamdoupe.com/teaching/classes/cse340-principles-of-programming-languages-f15/slides/Hindley-MilnerTypeChecking-Mohsen-Zohrevandi.pdf)
+- [What is Gradual Typing](https://wphomes.soic.indiana.edu/jsiek/what-is-gradual-typing/)
+- Near Future Programming Languages ppt
+- https://wiki.haskell.org/Typeclassopedia
+- [A map of Haskell's numeric types](https://blog.plover.com/prog/haskell/numbers.html)
+- https://wiki.haskell.org/Haskell
+- https://en.wikibooks.org/wiki/Haskell
+- GHC 贡献者 https://simon.peytonjones.org/publications/
+  - https://simon.peytonjones.org/secrets-of-typechecker/
+  - https://haskell.foundation/events/2023-ghc-development-workshop.html
+  - https://haskell.foundation/
+- MixML https://people.mpi-sws.org/~rossberg/mixml/
+- 1ML https://people.mpi-sws.org/~rossberg/1ml/
+- [Algo-J-For-Stack-Languages](https://github.com/UberPyro/Algo-J-For-Stack-Languages)
+- okmij      https://okmij.org/ftp/
 - 
+
+
+
