--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Modern Compiler Implementation in C (Andrew W.Appel,with Jens Palsberg) 虎书🐯📚》/目录.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Modern Compiler Implementation in C (Andrew W.Appel,with Jens Palsberg) 虎书🐯📚》/目录.md
@@ -1,1 +1,166 @@
 Modern Compiler Implementation in C (Andrew W.Appel,with Jens Palsberg) 虎书🐯📚
+
+Modern Compiler Implementation in C
+
+[toc]
+
+---
+
+### **内容 (Contents)**
+
+- **序言 (Preface)** ix
+
+---
+
+### **第一部分：编译的基础 (Part I: Fundamentals of Compilation)**
+
+#### 第1章 引言 (Introduction) 3  
+- 1.1 模块与接口 (Modules and Interfaces) 4  
+- 1.2 工具与软件 (Tools and Software) 5  
+- 1.3 树语言的数据结构 (Data Structures for Tree Languages) 7  
+
+#### 第2章 词法分析 (Lexical Analysis) 16  
+- 2.1 词法记号 (Lexical Tokens) 17  
+- 2.2 正则表达式 (Regular Expressions) 18  
+- 2.3 有限自动机 (Finite Automata) 21  
+- 2.4 非确定性有限自动机 (Nondeterministic Finite Automata) 24  
+- 2.5 Lex：词法分析器生成器 (Lex: A Lexical Analyzer Generator) 30  
+
+#### 第3章 语法分析 (Parsing) 39  
+- 3.1 上下文无关文法 (Context-Free Grammars) 41  
+- 3.2 预测分析 (Predictive Parsing) 46  
+- 3.3 LR 分析 (LR Parsing) 56  
+- 3.4 使用解析器生成器 (Using Parser Generators) 69  
+- 3.5 错误恢复 (Error Recovery) 76  
+
+#### 第4章 抽象语法 (Abstract Syntax) 88  
+- 4.1 语义动作 (Semantic Actions) 88  
+- 4.2 抽象解析树 (Abstract Parse Trees) 92  
+
+#### 第5章 语义分析 (Semantic Analysis) 103  
+- 5.1 符号表 (Symbol Tables) 103  
+- 5.2 Tiger 编译器中的绑定 (Bindings for the Tiger Compiler) 112  
+- 5.3 表达式的类型检查 (Type-Checking Expressions) 115  
+- 5.4 声明的类型检查 (Type-Checking Declarations) 118  
+
+#### 第6章 活动记录 (Activation Records) 125  
+- 6.1 栈帧 (Stack Frames) 127  
+- 6.2 Tiger 编译器中的帧 (Frames in the Tiger Compiler) 135  
+
+#### 第7章 翻译为中间代码 (Translation to Intermediate Code) 150  
+- 7.1 中间表示树 (Intermediate Representation Trees) 151  
+- 7.2 树的翻译 (Translation into Trees) 154  
+- 7.3 声明 (Declarations) 170  
+
+#### 第8章 基本块和轨迹 (Basic Blocks and Traces) 176  
+- 8.1 规范化树 (Canonical Trees) 177  
+- 8.2 驯服条件分支 (Taming Conditional Branches) 185  
+
+#### 第9章 指令选择 (Instruction Selection) 191  
+- 9.1 指令选择算法 (Algorithms for Instruction Selection) 194  
+- 9.2 CISC 机器 (CISC Machines) 202  
+- 9.3 Tiger 编译器的指令选择 (Instruction Selection for the Tiger Compiler) 205  
+
+#### 第10章 活跃性分析 (Liveness Analysis) 218  
+- 10.1 数据流方程的解法 (Solution of Dataflow Equations) 220  
+- 10.2 Tiger 编译器中的活跃性 (Liveness in the Tiger Compiler) 229  
+
+#### 第11章 寄存器分配 (Register Allocation) 235  
+- 11.1 简化的着色 (Coloring by Simplification) 236  
+- 11.2 合并 (Coalescing) 239  
+- 11.3 预着色节点 (Precolored Nodes) 243  
+- 11.4 图着色实现 (Graph Coloring Implementation) 248  
+- 11.5 树的寄存器分配 (Register Allocation for Trees) 257  
+
+#### 第12章 集成 (Putting It All Together) 265  
+
+---
+
+### **第二部分：高级主题 (Part II: Advanced Topics)**
+
+#### 第13章 垃圾回收 (Garbage Collection) 273  
+- 13.1 标记-清除回收 (Mark-and-Sweep Collection) 273  
+- 13.2 引用计数 (Reference Counts) 278  
+- 13.3 复制回收 (Copying Collection) 280  
+- 13.4 分代回收 (Generational Collection) 285  
+- 13.5 增量回收 (Incremental Collection) 287  
+- 13.6 Baker 算法 (Baker’s Algorithm) 290  
+- 13.7 编译器接口 (Interface to the Compiler) 291  
+
+#### 第14章 面向对象语言 (Object-Oriented Languages) 299  
+- 14.1 类 (Classes) 299  
+- 14.2 数据字段的单继承 (Single Inheritance of Data Fields) 302  
+- 14.3 多继承 (Multiple Inheritance) 304  
+- 14.4 类成员测试 (Testing Class Membership) 306  
+- 14.5 私有字段与方法 (Private Fields and Methods) 310  
+- 14.6 无类语言 (Classless Languages) 310  
+- 14.7 面向对象程序优化 (Optimizing Object-Oriented Programs) 311  
+
+#### 第15章 函数式编程语言 (Functional Programming Languages) 315  
+- 15.1 简单的函数式语言 (A Simple Functional Language) 316  
+- 15.2 闭包 (Closures) 318  
+- 15.3 不可变变量 (Immutable Variables) 319  
+- 15.4 内联扩展 (Inline Expansion) 326  
+- 15.5 闭包转换 (Closure Conversion) 332  
+- 15.6 高效尾递归 (Efficient Tail Recursion) 335  
+- 15.7 惰性求值 (Lazy Evaluation) 337  
+
+#### 第16章 多态类型 (Polymorphic Types) 350  
+- 16.1 参数化多态 (Parametric Polymorphism) 351  
+- 16.2 类型推断 (Type Inference) 359  
+- 16.3 多态变量的表示 (Representation of Polymorphic Variables) 369  
+- 16.4 静态重载的解析 (Resolution of Static Overloading) 378  
+
+#### 第17章 数据流分析 (Dataflow Analysis) 383  
+- 17.1 流分析的中间表示 (Intermediate Representation for Flow Analysis) 384  
+- 17.2 各种数据流分析 (Various Dataflow Analyses) 387  
+- 17.3 使用数据流分析进行转换 (Transformations Using Dataflow Analysis) 392  
+- 17.4 加速数据流分析 (Speeding Up Dataflow Analysis) 393  
+- 17.5 别名分析 (Alias Analysis) 402  
+
+#### 第18章 循环优化 (Loop Optimizations) 410  
+- 18.1 支配者 (Dominators) 413  
+- 18.2 循环不变计算 (Loop-Invariant Computations) 418  
+- 18.3 归纳变量 (Induction Variables) 419  
+- 18.4 数组边界检查 (Array-Bounds Checks) 425  
+- 18.5 循环展开 (Loop Unrolling) 429  
+
+#### 第19章 静态单赋值形式 (Static Single-Assignment Form) 433  
+- 19.1 转换为 SSA 形式 (Converting to SSA Form) 436  
+- 19.2 支配树的高效计算 (Efficient Computation of the Dominator Tree) 444  
+- 19.3 使用 SSA 的优化算法 (Optimization Algorithms Using SSA) 451  
+- 19.4 数组、指针和内存 (Arrays, Pointers, and Memory) 457  
+- 19.5 控制依赖图 (The Control-Dependence Graph) 459  
+- 19.6 从 SSA 形式转换回普通形式 (Converting Back from SSA Form) 462  
+- 19.7 函数式中间形式 (A Functional Intermediate Form) 464  
+
+#### 第20章 流水线与调度 (Pipelining and Scheduling) 474  
+- 20.1 无资源限制的循环调度 (Loop Scheduling Without Resource Bounds) 478  
+- 20.2 有资源限制的循环流水线 (Resource-Bounded Loop Pipelining) 482  
+- 20.3 分支预测 (Branch Prediction) 490  
+
+#### 第21章 内存层次结构 (The Memory Hierarchy) 498  
+- 21.1 缓存组织 (Cache Organization) 499  
+- 21.2 缓存块对齐 (Cache-Block Alignment) 502  
+- 21.3 预取 (Prefetching) 504  
+- 21.4 循环置换 (Loop Interchange) 510  
+- 21.5 阻塞 (Blocking) 511  
+- 21.6 垃圾回收与内存层次结构 (Garbage Collection and the Memory Hierarchy) 514  
+
+---
+
+### **附录：Tiger 语言参考手册 (Appendix: Tiger Language Reference Manual)** 518  
+- A.1 词法问题 (Lexical Issues) 518  
+- A.2 声明 (Declarations) 518  
+- A.3 变量与表达式 (Variables and Expressions) 521  
+- A.4 标准库 (Standard Library) 525  
+- A.5 Tiger 程序示例 (Sample Tiger Programs) 526  
+
+---
+
+### **参考文献 (Bibliography)** 528  
+
+---
+
+### **索引 (Index)** 537  
+
